Renaming a budget did not update the name in the storage Reverting changes did not update the budget value entry area

BUG: 276783

svn path=/trunk/extragear/office/kmymoney/; revision=1239890